Change page title, adjust font handling on smaller screens and fix logic issue in the random dataset selector

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,8 +35,8 @@ body {
 	font-weight: bold;
 	text-transform: uppercase;
 	letter-spacing: 0.0325em;
-	font-size: 60px;
-	font-size: 6vh;
+	font-size: 100%;
+	font-size: calc(2vw + 2vh + 1vmin);
 }
 
 .dataset_row {
@@ -76,15 +76,13 @@ body {
 }
 
 .dataset h2 {
-	max-height: 11vh;
-	overflow: hidden;
+	min-height: 11vh;
 }
 
 .dataset h2 a {
 	color: #F4F4F2;
 	font-family: Montserrat, sans-serif;
-	font-size: 35px;
-	font-size: 5vh;
+	font-size: calc(1vw + 1vh + 0.5vmin);
 	font-weight: bold;
 	letter-spacing: 0.0325em;
 	text-decoration: none;
@@ -92,10 +90,10 @@ body {
 }
 
 .dataset p {
-	max-height: 10vh;
-	margin-top: 1vh;
+	margin-top: 10px;
 	color: #FDFFFC;
 	font-family: Montserrat, sans-serif;
+	font-size: calc(0.5vw + 0.5vh + 0.1vmin);
 	margin-bottom: auto;
 }
 
@@ -114,7 +112,7 @@ body {
 
 	padding-left: 30px;
 	padding-right: 30px;
-	height: 50%
+	height: 50%;
 }
 
 .btn {
